# PsycoManagement

./: PROJECT_SUMMARY.md  README.md
.github/workflows/: azure-static-web-apps-icy-wave-09ab44110.yml
Backend/: .env  .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
Backend/config/: connection.py  jwt_functions.py  verify_functions.py
Backend/models/: annotations_model.py  auth_user_request.py  bill_model.py  clinical_history.py  consultant_model.py  event_model.py  home_info_model.py  responseLogin.py  therapist_model.py
Backend/routes/: annotations.py  consultants.py  events.py  homeinfo.py  profile.py  therapist.py
Backend/schemas/: annotation_schema.py  consultant_schema.py  event_schema.py  home_info_schema.py  profile_schema.py  response_login_schema.py  therapist_schema.py
Documentacion/: Componente tecnico y metodologico.docx  Modelos en StarUML.mdj
Frontend/PsycoManagement/src/config/: elementals.jsx  firebase.js  statics.jsx
Frontend/PsycoManagement/src/context/: AuthContext.jsx  stores.jsx
Frontend/PsycoManagement/src/pages/: AgendaPage.jsx  AuthPage.jsx  (+3 more)
Frontend/psycomanagement/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  tailwind.config.js
Frontend/psycomanagement/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
Movil/psyco_admin/: README.md  pubspec.yaml
Movil/psyco_admin/lib/: main.dart
Movil/psyco_admin/linux/: CMakeLists.txt  my_application.cc
Movil/psyco_admin/test/: widget_test.dart
Movil/psyco_admin/web/: index.html  manifest.json
Movil/psyco_admin/windows/: CMakeLists.txt
(+148 files in other folders)
